# pyMzLib

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  mkdocs.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  capability_request.yml  config.yml
.github/workflows/: docs.yml  wheels.yml
code/: PINNED.md
docs/: faq.md  getting-started.md  index.md  reference.md
docs/contributing/: adding-a-capability.md  building.md  conventions.md  releasing.md
docs/design/: architecture.md  decisions.md
docs/guides/: flashlfq.md  peptidoforms.md  pride.md  readers.md
pkg/bridge/: MzLibBridge.csproj  Peptidoform.cs  Program.cs  Proteoform.cs  Quantification.cs  Reading.cs
pkg/bridge.tests/: ArgumentsTests.cs  ExternalServiceTestHelper.cs  MzLibBridge.Tests.csproj  PeptidoformTests.cs  PrideLiveCanaryTests.cs  ProteoformTests.cs  QuantificationTests.cs  ReadingTests.cs  VerbHandlerTests.cs  WireFormatTests.cs  coverlet.runsettings
pkg/python/: .coverage  NOTICE  README.md  pyproject.toml
pkg/python/src/pymzlib/: __init__.py  _bridge.py  flashlfq.py  peptidoform.py  pride.py  proteoform.py  readers.py
pkg/python/tests/: conftest.py  test_bridge.py  test_flashlfq.py  test_peptidoform.py  test_peptidoform_live.py  test_pride.py  test_pride_live.py  test_proteoform.py  test_proteoform_live.py  test_readers.py
pkg/python/tests/fixtures/: flashlfq_small.json  peptidoform_P02768_small.json  pride_PXD000001_files.json  proteoform_P02768_small.json  readers_formats.json
