[build-system]
# Pinned: PEP 639 `license = "<SPDX>"` and `license-files = [...]` are only honoured by hatchling
# 1.27+. An older backend accepts both silently and ships a wheel with NO licence text, which is
# exactly the bug this project just fixed - so the fix needs a floor or it can regress invisibly.
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "pymzlib"
# Single-sourced from the package itself; keeping two copies in step by hand is a mistake
# waiting for a busy release day.
dynamic = ["version"]
description = "mzLib for Python — mass spectrometry and proteomics from the mzLib C# library, with no .NET installation required"
readme = "README.md"
# Deliberately permissive, and please leave it that way without a specific reason (decision D7).
# The usual "3.11+" advice comes from packages that ship compiled extensions and must rebuild for
# every Python version — real recurring cost per supported version. pyMzLib has no compiled Python
# code, so a wheel serves every version equally and an old floor costs nothing to maintain. What it
# buys is the person this package exists for: someone on a locked-down cluster with a Python they
# cannot change. The only real cost is that library code here must avoid post-3.9 syntax.
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
# Without this, hatchling ships NO licence text at all: its project root is pkg/python, so the
# copies at the repository root are out of reach and the default glob silently matches nothing.
# The wheel redistributes compiled LGPL code, so shipping it unlicensed is a real violation.
license-files = ["LICENSE", "LICENSE.GPL-3.0", "NOTICE"]
authors = [
    { name = "Michael R. Shortreed", email = "mshort@chem.wisc.edu" },
    { name = "Lloyd M. Smith", email = "smith@chem.wisc.edu" },
]
keywords = ["proteomics", "mass spectrometry", "PRIDE", "mzLib", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    # No "License :: OSI Approved ::" classifier: PyPI rejects an upload that carries both a
    # License-Expression and a licence classifier, and the expression above is the modern form.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

# Deliberately empty, and it should stay that way. Every runtime dependency pyMzLib declares is
# a version constraint it can impose on someone else's environment — the exact friction this
# project exists to avoid (decision D2). The .NET payload ships inside the wheel instead.
dependencies = []

[project.optional-dependencies]
# Development only. Never promote anything here into `dependencies`.
dev = ["pytest>=7", "pytest-cov>=4", "ruff>=0.5", "build", "wheel"]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.25"]

[project.urls]
Homepage = "https://github.com/smith-chem-wisc/pyMzLib"
Documentation = "https://smith-chem-wisc.github.io/pyMzLib/"
Source = "https://github.com/smith-chem-wisc/pyMzLib"
Issues = "https://github.com/smith-chem-wisc/pyMzLib/issues"
Changelog = "https://github.com/smith-chem-wisc/pyMzLib/blob/main/CHANGELOG.md"
"mzLib (upstream)" = "https://github.com/smith-chem-wisc/mzLib"

[tool.hatch.version]
path = "src/pymzlib/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pymzlib"]
# The self-contained bridge executable is staged under src/pymzlib/_dotnet/<rid>/ by
# pkg/build/publish-bridge.ps1 before the wheel is built. It is a build artifact, never
# committed to source control.
artifacts = ["src/pymzlib/_dotnet/**"]

[tool.hatch.build.targets.sdist]
# An sdist cannot carry a platform binary, so it is source only. DO NOT PUBLISH ONE: it would
# install "successfully" and then fail on the first call, whereas with wheels only, an
# unsupported platform gets a clean "no matching distribution found". PyPI will not let you add
# an sdist to an already-published version, so this is a one-way door and the answer is no.
# It is still built locally for inspection, hence the exclusions below.
exclude = ["src/pymzlib/_dotnet"]
# Hatchling reads .gitignore from the project root (pkg/python), and there isn't one there — the
# repository's sits two levels up and is never consulted. Without these, a local sdist build
# sweeps in the 121 MB wheel sitting in dist_untagged and the coverage database.

[tool.hatch.build]
exclude = [
    "dist_untagged",
    ".coverage",
    "coverage.xml",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: hits the live PRIDE Archive API; deselect with -m 'not network'",
    "slow: downloads real files",
]

[tool.ruff]
line-length = 100
target-version = "py39"

# --------------------------------------------------------------------------------------------
# Coverage. Read the testing section of CONTRIBUTING.md before changing a threshold — in a wrapper like
# this, line coverage is the easy half of the problem and the boundary is the hard half.
# --------------------------------------------------------------------------------------------
[tool.coverage.run]
source = ["pymzlib"]
branch = true
# The .NET payload is not Python and is not ours to measure here; the bridge has its own
# C# test project (pkg/bridge.tests).
omit = ["*/_dotnet/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Deliberately high, and achievable, because this package is small and thin. If a future
# capability makes this genuinely hard to hit, the right response is a targeted `# pragma:
# no cover` with a comment saying why — not lowering the bar for the whole project.
fail_under = 90
exclude_also = [
    # Defensive branches for platforms no CI runner can reach.
    "raise BridgeNotFoundError\\(f\"Unsupported platform",
    "if TYPE_CHECKING:",
]
